# fluid-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  cuda_helpers.h  cuda_interop.h  cuda_kernels.cuh  data_structures.h  fluid_grid.h  globals.h  particle_system.h  renderer_gl.h
kernels/: add_gravity_kernel.cu  alternative_p2g_kernels.cu  calculate_divergence_kernel.cu  compute_particle_cell_keys.cu  enforce_boundary_kernel.cu  grid_to_particle_kernel.cu  initialize_fluid_grid_kernel.cu  initialize_particles_kernel.cu  jacobi_iteration_kernel.cu  normalize_grid_velocities_kernel.cu  particle_to_grid_kernel.cu  project_velocities_kernel.cu  save_velocities_kernel.cu  update_particle_positions.cu  update_pbo_kernel.cu  zero_out_fluid_grid_kernel.cu
shaders/: sphere.frag  sphere.vert
src/: cuda_interop.cu  fluid_grid.cpp  globals.cpp  main.cpp  particle_system.cpp  renderer_gl.cpp
